Fix publish button alignment

--- a/erpnext/public/less/hub.less
+++ b/erpnext/public/less/hub.less
@@ -234,6 +234,12 @@ body[data-route^="marketplace/"] {
 		}
 	}
 
+	.publish-area-head {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 20px;
+	}
+	
 	.form-container {
 		.frappe-control {
 			max-width: 100% !important;
